# strixhaven-encounter-manager

./: .firebaserc  CODESPACE.md  README.md  cli.py  create_test_user.py  firestore.rules  pyproject.toml  seed_encounter.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: deploy-web.yml
engine/: __init__.py  dice.py  firebase_client.py  initiative.py
firebase/: README.md
flutter-app/: README.md
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: firebase_options.dart  main.dart
frontend/lib/models/: encounter.dart
frontend/lib/screens/: battle_timeline_screen.dart  login_screen.dart
frontend/lib/services/: auth_service.dart  encounter_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: auth_gate.dart  combatant_card.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: encounter_model_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
python-engine/: README.md
tests/: __init__.py  test_dice.py  test_initiative.py
(+1 files in other folders)
