[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "strixhaven-encounter-manager"
version = "0.1.0"
description = "Tabletop RPG encounter tracker — Python dice & initiative engine"
requires-python = ">=3.11"
dependencies = [
    # firebase-admin is optional; install separately if using Firebase sync
    # firebase-admin>=6.0
]

[project.optional-dependencies]
firebase = ["firebase-admin>=6.0"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
strixhaven = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
